# letters-nn-pro

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
docs/: labels.md
scripts/: make_toy_data.py  predict.py  train.py
src/letters_nn/: __init__.py  data.py  model.py
tests/: test_forward_shapes.py
