[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letters_nn"
version = "0.1.0"
description = "Handwritten letter classifier (NumPy NN from scratch)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Dhamodar Burla", email="burladhamodar@gmail.com"}]
dependencies = ["numpy>=1.24","pandas>=2.1","matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=8","flake8","black","isort","pre-commit"]

[tool.setuptools.packages.find]
where = ["src"]
